@@ -448,6 +448,8 @@ Release 2.8.0 - UNRELEASED
     HDFS-8165. Move GRANDFATHER_GENERATION_STAMP and GRANDFATER_INODE_ID to
     hdfs-client. (wheat9)
 
+    HDFS-8152. Refactoring of lazy persist storage cases. (Arpit Agarwal)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
